fixed navbar wrapping for the most part, added background

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -18,35 +18,42 @@ h3 {
 
 .App {
   text-align: center;
-  /* background-color: rgb(40, 48, 54); */
-  background-color: #352147;
-  background-color: #0b132b;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  
   /* justify-content: center; */
-  /* font-size: calc(10px + 2vmin); */
   color: white;
 }
 
 .App-main {
-  width: 100%;
+  width: 80%;
   max-width: 1200px;
 }
 
 .navbar {
-  display: inline-flex;
-  justify-content: space-between;
-  align-items: center;
+  display: inline-block;
+  /* justify-content: space-between; */
+  /* align-items: center; */
+  /* white-space: nowrap; */
   width: 100%;
   max-width: 1200px;
-  height: 4em;
-  border-bottom: solid;
+  height: 6em;
+  /* border-bottom: solid; */
   border-width: 1px;
   border-color: #6FFFE9;
   /* box-shadow: 0px 0px 10000px #5bc0be */
+}
+
+.navbar-left {
+  height: 100%;
+  display: flex;
+  float: left;
+  align-items: center;
+}
+
+.navbar-name {
+  /* margin: auto; */
 }
 
 .navbar-name h1 {
@@ -55,13 +62,7 @@ h3 {
   padding: 0 6px;
   font-family: 'dosis', sans-serif;
   font-size: 40px;
-
-  /* overflow: hidden; */
-  /* float: left; */
-  /* position: relative; */
-  /* left: 0px; */
   transition: 0.6s;
-
 }
 
 .navbar-name h1:hover {
@@ -71,30 +72,35 @@ h3 {
 .navbar-name a {
   color: white;
   text-decoration: none;
+  
+}
+
+.navbar-right {
+  height: 100%;
+  float: right;
+  display: flex;
+  /* justify-content: center; */
 }
 
 .navlink-wrapper {
-  float: right;
-  display: flex;
+  margin: auto;
+  /* display: flex; */
   width: 480px;
-  height: 100%;
+  /* height: 100%; */
   height: 80%;
-  align-items: center;
-  /* position: absolute; */
-  /* right: 0px; */
+  /* align-items: center; */
+  /* justify-content: center; */
 }
 
-.navlink-wrapper div {
+.navlink-wrapper a {
   /* width: 50%; */
-  /* width: 120px; */
   /* padding: 12px; */
-  margin: 0 12px 0px;
+  /* margin: 0 12px 0px; */
   margin: auto;
-  width: 25%;
+  width: 120px;
   height: 100%;
-  /* display: flex; */
-  /* align-items: center; */
-
+  display: inline-flex;
+  align-items: center;
 }
 
 .navlink {
@@ -114,8 +120,15 @@ h3 {
   background-color: #5bc0be;
 }
 
+.media-icons {
+  white-space: nowrap;
+  margin: auto;
+  /* display: flex; */
+  /* float: right; */
+  /* height: 100%; */
+}
+
 .media-icons a {
-  display: inline-block;
   height: 32px;
   color: white;
   text-decoration: none;
@@ -146,7 +159,7 @@ h3 {
   width: 100%;
   height: 500px;
   /* background-color: purple; */
-  background-color: #3a506b;
+  background-color: rgba(58, 80, 107, 0.6);
   display: flex;
   align-items: center;
   justify-content: center;
