--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 html {
+  background: url('./wave-bg.jpg') no-repeat center center fixed;
+  /* background-repeat: no-repeat; */
+  /* background-position: fixed; */
+  background-size: cover;
   background-color: #0b132b;
 }
 
@@ -14,6 +18,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+
 }
 
 code {
